# milone-lang

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .travis.yml  ARCHITECTURE.md  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  a.ts  build-meta.ninja  build-ninja-gen  build-template.ninja  build.ninja-template  clean  fsharplint.json  install  install-dev  install_from_binary.md  integration-all  integration-test  internals.md  kir-dump  milone  milone-dotnet  milone-native  milone-netcore  milone_lang.sln  monomorphize-tys  notes.md  parse-self  pat-compile  records  region_primitive_checks  test  test-new  test-self  test-watch  (+2 more)
.config/: dotnet-tools.json
MiloneLang/: ArityCheck.fs  AstBundle.fs  AstToHir.fs  AutoBoxing.fs  Bundling.fs  CIrGen.fs  CPrinting.fs  Cir.fs  CirAlpha.fs  CirDump.fs  CirGen.fs  Cli.fs  ClosureConversion.fs  Compatible.fs  DeriveRecordOps.fs  EtaExpansion.fs  FSharpOnly.fs  Helpers.fs  Hir.fs  Hoist.fs  Kir.fs  KirDump.fs  KirGen.fs  KirPropagate.fs  KirToMir.fs  Lexing.fs  MainHoist.fs  MiloneLang.fs  MiloneLang.fsproj  MiloneLang.milone  MiloneLang.milone_project  MiloneOnly.fs  MiloneOnly.milone  Mir.fs  MirGen.fs  MonoTy.fs  Monomorphizing.fs  NameRes.fs  Parsing.fs  PatternCompile.fs  (+17 more)
MiloneTests/: Assets.fs  CPrintingTests.fs  HelpersTests.fs  LexingTests.fs  MiloneTests.fsproj  SyntaxTokenizeTests.fs  TreeMapTests.fs
boot/: .editorconfig  .gitignore  Dockerfile  ci  compare  dev  docker-compose.yml  integ  integ-try  integration-all  milone  (+16 more)
nursery/ExDylib/hello/: Cargo.toml
nursery/ExDylib/hello/src/: lib.rs
(+1646 files in other folders)
